# elevenlabs_vc

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/workflows/: rust.yml
examples/: advanced_vc.rs  basic_vc.rs
src/: error.rs  lib.rs  models.rs  types.rs  voices.rs
tests/: integration_test.rs
