[package]
name = "elevenlabs_vc"
version = "0.0.4"
edition = "2024"
description = "Type-safe Rust client for ElevenLabs Voice Changer API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamzaelmarjani/elevenlabs_vc"
keywords = [
    "elevenlabs",
    "elevenlabs_vc",
    "elevenlabs_api",
    "voice-changer",
    "voice-cloning",
]
categories = ["api-bindings", "multimedia::audio", "network-programming"]

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
chrono = "0.4.41"

[dev-dependencies]
tokio-test = "0.4.4"

[[example]]
name = "basic_vc"
required-features = []

[[example]]
name = "advanced_vc"
required-features = []
